--- a/authorizeSever/build.gradle
+++ b/authorizeSever/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
@@ -29,8 +30,10 @@ dependencies {
 	compile 'org.webjars:jquery:2.1.1'
 	compile 'org.webjars:bootstrap:3.2.0'
 	compile 'org.webjars:webjars-locator:0.36'
+	compile 'org.webjars:js-cookie:2.1.0'
 	compile 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.4.RELEASE'
 	runtimeOnly('org.postgresql:postgresql')
+
 }
 
 compileKotlin {
