--- a/authorizeSever/src/main/resources/application.yml
+++ b/authorizeSever/src/main/resources/application.yml
@@ -1,6 +1,10 @@
-server:
-  port: 8081
-
+security:
+  oauth2:
+    client:
+      client-id: acme
+      client-secret: acmesecret
+      scope: read,write
+      auto-approve-scopes: '.*'
 spring:
   datasource:
     platform: postgres
@@ -17,19 +21,24 @@ spring:
       hibernate:
         temp:
           use_jdbc_metadata_defaults: false
+  redis:
+    host: localhost
+    port: 6379
+  main:
+    allow-bean-definition-overriding: true
 
-security:
-  oauth2:
-    client:
-      client-id: 233668646673605
-      client-secret: 33b17e044ee6a4fa383f46ec6e28ea1d
-      access-token-uri: https://graph.facebook.com/oauth/access_token
-      user-authorization-uri: https://www.facebook.com/dialog/oauth
-      token-name: oauth_token
-      authentication-scheme: query
-      client-authentication-scheme: form
-    resource:
-      user-info-uri: https://graph.facebook.com/me
+facebook:
+  client:
+    client-id:
+    client-secret: 
+    access-token-uri: https://graph.facebook.com/oauth/access_token
+    user-authorization-uri: https://www.facebook.com/dialog/oauth
+    token-name: oauth_token
+    authentication-scheme: query
+    client-authentication-scheme: form
+  resource:
+    user-info-uri: https://graph.facebook.com/me
+
 github:
   client:
     clientId: bd1c0a783ccdd1c9b9e4
