--- a/authorizeSever/build.gradle
+++ b/authorizeSever/build.gradle
@@ -1,12 +1,33 @@
-plugins {
-	id 'org.jetbrains.kotlin.plugin.jpa' version '1.2.71'
-	id 'org.springframework.boot' version '2.1.4.RELEASE'
-	id 'war'
-	id 'org.jetbrains.kotlin.jvm' version '1.2.71'
-	id 'org.jetbrains.kotlin.plugin.spring' version '1.2.71'
+buildscript {
+	ext {
+		kotlinVersion = '1.3.11'
+		springBootVersion = '2.1.0.RELEASE'
+		springCloudVersion ='2.0.1.RELEASE'
+		commonsIoVersion = '2.6'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+		classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
+	}
 }
 
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-spring'
+apply plugin: 'kotlin-jpa'
+apply plugin: "kotlin-allopen"
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'idea'
+
+allOpen {
+	annotation "javax.persistence.Entity"
+}
 
 group = 'com.rabbitcat'
 version = '0.0.1-SNAPSHOT'
@@ -16,11 +37,12 @@ repositories {
 	mavenCentral()
 }
 
+
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
@@ -33,7 +55,6 @@ dependencies {
 	compile 'org.webjars:js-cookie:2.1.0'
 	compile 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.4.RELEASE'
 	runtimeOnly('org.postgresql:postgresql')
-
 }
 
 compileKotlin {
