login 로직 추가 - 회원의 아이디 또는 회원의 이메일과 패스워드를 확인 하여 로그인 하게 수정 sns login 로직 수정 - sns 로그인 이후 sns 에서 가져온 이메일과 회원의 이메일 비교 후 같은 이메일이 있으면 해당 회원으로 로그인 처리

--- a/authorizeSever/src/main/resources/application.yml
+++ b/authorizeSever/src/main/resources/application.yml
@@ -32,20 +32,20 @@ spring:
 
 facebook:
   client:
-    client-id: 
+    client-id:
     client-secret:
     access-token-uri: https://graph.facebook.com/oauth/access_token
-    user-authorization-uri: https://www.facebook.com/dialog/oauth
+    user-authorization-uri: https://www.facebook.com/dialog/oauth?scope=email
     token-name: oauth_token
     authentication-scheme: query
     client-authentication-scheme: form
   resource:
-    user-info-uri: https://graph.facebook.com/me
+    user-info-uri: https://graph.facebook.com/me?fields=email,name
 
 github:
   client:
     client-id:
-    client-secret:
+    client-secret: 
     access-token-uri: https://github.com/login/oauth/access_token
     user-authorization-uri: https://github.com/login/oauth/authorize
     client-authentication-scheme: form
